--- a/index.html
+++ b/index.html
@@ -364,6 +364,18 @@
                 mobileMenu.classList.toggle('mobile-menu-active');
             }
         }
+        
+        const anchors = document.querySelector('.page-header').querySelectorAll('a[href*="#"]');
+        for (let anchor of anchors) {
+            anchor.addEventListener('click', function(event) {
+                event.preventDefault();
+                const blockId = anchor.getAttribute('href');
+                document.querySelector('' + blockId).scrollIntoView({
+                    behavior: "smooth",
+                    block: "start"
+                })
+            })
+        }
     </script>
 </body>
 </html>
